--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
               if (user.isLoggedIn) {
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>')
                 links.push('<li class="nav-item"><a class="nav-link" href="/chart/">Chart</a></li>')
+                links.push('<li class="nav-item"><a class="nav-link" href="/list_podcasts/">Podcast</a></li>')
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Search Bar</a></li>')
                 links.push('<li class="nav-item"><a class="nav-link" href="#">Kelola Playlist</a></li>')
                 
