--- a/biru/templates/podcast.html
+++ b/biru/templates/podcast.html
@@ -72,9 +72,11 @@
         <div class="row justify-content-center">
             <div class="col-md-q0">
                 <div class="card mt-5">
-                    <div class="card-header bg-success text-light text-center">
-                        <h3 class="card-title">Podcast List</h3>
-                    </div>
+<div class="card-header bg-success text-light d-flex justify-content-between align-items-center">
+    <h3 class="card-title" style="margin-left: 44%;">Podcast List</h3>
+    <a href="{% url 'create_podcast' %}" class="btn btn-light">Tambah Podcast</a>
+</div>
+
                     <div class="card-body">
                         <table class="table">
                             <thead>
@@ -91,9 +93,14 @@
                                         <td>{{ podcast.1 }}</td>
                                         <td>{{ podcast.2 }}</td>
                                         <td>{{ podcast.3 }}</td>
-                                        <td><a href="{% url 'episode' podcast.0 %}" class="btn btn-primary">Lihat Daftar Episode</a>
-                                        <a href="{% url 'create_episode' podcast.0 %}" class="btn btn-warning">Tambah Episode</a>
-                                        <a href="#" class="btn btn-danger">Hapus</a></td>
+                                        <td><a href="{% url 'episodes' podcast.0 %}" class="btn btn-primary">Lihat Daftar Episode</a>
+                                            <a href="{% url 'get_podcast_details' podcast.0 %}" class="btn btn-secondary">Play Podcast</a>
+                                        <a href="{% url 'create_episode' podcast.0 %}" class="btn btn-warning">Tambah Episode</a>  
+                                        <form action="{% url 'delete_podcast' podcast.0 %}" method="post" style="display:inline;">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger">Hapus</button>
+                                        </form>
+                                    </td>
                                     </tr>
                                     {% endfor %}
                             </tbody>
