--- a/biru/templates/chart.html
+++ b/biru/templates/chart.html
@@ -1,44 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" style="height: 100%;">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chart</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
-<body class="d-flex flex-column bg-light" style="height: 100%;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
-        <a class="navbar-brand text-white" href="#">Marmut</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon " style="filter: invert(100%);"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="dashboard.html">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="chart.html">Chart</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="userplaylist.html">Playlist</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="subscribe.html">Subscribe</a></li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Logout</a></li>
-            </ul>
-            <form class="form-inline ml-auto my-2 my-lg-0 justify-content-end">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search text-white" viewBox="0 0 16 16">
-                        <path d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-                        <path d="M6.5 12a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11zm0-1a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9z"/>
-                    </svg>
-                </button>
-            </form>
-        </div>
-    </nav>
+{% extends 'base.html' %}
+{% block meta %}
+
+{% endblock %}
+{% block content %}
 
     <div class="container mt-5 mb-5">
         <div class="row justify-content-center">
@@ -84,3 +48,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
