--- a/biru/templates/chartdetailweekly.html
+++ b/biru/templates/chartdetailweekly.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" style="height: 100%;">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chart</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
+{% extends 'base.html' %}
+{% block meta %}
+
+{% endblock %}
+{% block content %}
 <body class="d-flex flex-column bg-light" style="height: 100%;">
     <nav class="navbar navbar-expand-lg navbar-light bg-success">
         <a class="navbar-brand text-white" href="#">Marmut</a>
@@ -82,3 +79,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+{% endblock %}
