--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -4,10 +4,8 @@
 <div class="container mt-5">
     <h1 class="fw-bold">🪪 Dashboard</h1>
     <div id="userInfo">
-        <!-- Placeholder for user information -->
     </div>
     <div id="additionalInfo" class="mt-3">
-        <!-- Placeholder for additional information based on user role -->
     </div>
 </div>
 
@@ -95,14 +93,11 @@
     function displayAdditionalInfo() {
         var additionalInfoHTML = "";
 
-        // Check if the user has multiple roles
-        var hasMultipleRoles = roles.length > 1;
-
-        // Additional info based on role
         if (roles.includes("Pengguna Biasa")) {
+            console.log("Pengguna Biasa");
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Playlist</h3>";
-            // Dummy playlist data
-            var playlists = ["Playlist 1", "Playlist 2", "Playlist 3", "Playlist 4", "Playlist 5", "Playlist 6", "Playlist 7", "Playlist 8", "Playlist 9", "Playlist 10", "Playlist 11", "Playlist 12", "Playlist 13", "Playlist 14", "Playlist 15", "Playlist 16", "Playlist 17", "Playlist 18", "Playlist 19", "Playlist 20"];
+            var playlists = {{ playlists|default_if_none:""|safe }};
+
             if (playlists.length === 0) {
                 additionalInfoHTML += "<p>Belum Memiliki Playlist</p>";
             } else {
@@ -120,10 +115,11 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (roles.includes("Artist") || roles.includes("Songwriter")) {
+        }
+        
+        if (roles.includes("Artist") || roles.includes("Songwriter")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Lagu</h3>";
-            // Dummy song data
-            var songs = ["Song 1", "Song 2", "Song 3"];
+            var songs = {{ songs|default_if_none:""|safe }};
             if (songs.length === 0) {
                 additionalInfoHTML += "<p>Belum Memiliki Lagu</p>";
             } else {
@@ -141,10 +137,11 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (roles.includes("Podcaster")) {
+        }
+
+        if (roles.includes("Podcaster")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Podcast</h3>";
-            // Dummy podcast data
-            var podcasts = ["Podcast 1", "Podcast 2", "Podcast 3"];
+            var podcasts = {{ podcasts|default_if_none:""|safe }};
             if (podcasts.length === 0) {
                 additionalInfoHTML += "<p>Belum Memiliki Podcast</p>";
             } else {
@@ -162,10 +159,11 @@
                 });
                 additionalInfoHTML += "</div>";
             }
-        } else if (roles.includes("Label")) {
+        }
+        
+        if (roles.includes("Label")) {
             additionalInfoHTML += "<h3 class='mt-4 fw-bold'>Album</h3>";
-            // Dummy album data
-            var albums = [];
+            var albums = {{ albums|default_if_none:""|safe }};
             if (albums.length === 0) {
                 additionalInfoHTML += "<p>Belum Memproduksi Album</p>";
             } else {
