[FEAT] Finish project

--- a/red/templates/list_song.html
+++ b/red/templates/list_song.html
@@ -26,7 +26,7 @@
             <td>{{ song.4 }}</td>
             <td>
               {% comment %} TODO: Route to R Play Song {% endcomment %}
-              <a href="" class="btn btn-primary btn-sm">Lihat Detail</a>
+              <a href="/green/song_detail/{{ song.0 }}" class="btn btn-primary btn-sm">Lihat Detail</a>
               <a href="/red/delete_lagu/{{ id_album }}/{{ song.0 }}" class="btn btn-danger btn-sm">Hapus</a>
             </td>
           </tr>
