--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
           }
 
           if (role.includes('Pengguna Biasa') || role.includes('Podcaster') || role.includes('Artist') || role.includes('Songwriter')) {
-            links.push('<li class="nav-item"><a class="nav-link" href="">Kelola Playlist</a></li>')
+            links.push('<li class="nav-item"><a class="nav-link" href="/green/kelola_playlist_terisi">Kelola Playlist</a></li>')
           }
 
           if (!isPremium && (role.includes('Pengguna Biasa') || role.includes('Podcaster') || role.includes('Artist') || role.includes('Songwriter'))) {
