--- a/biru/templates/chartdetailyearly.html
+++ b/biru/templates/chartdetailyearly.html
@@ -33,7 +33,7 @@
                                         <td>{{ detail.1 }}</td>
                                         <td>{{ detail.2 }}</td>
                                         <td>{{ detail.3 }}</td>
-                                        <td><a href="" class="btn btn-primary">Lihat</a></td>
+                                        <td><a href="/green/song_detail/{{ detail.4 }}" class="btn btn-primary">Lihat</a></td>
                                     </tr>
                                 {% endfor %}
                             {% endfor %}
