--- a/yellow/templates/search.html
+++ b/yellow/templates/search.html
@@ -55,7 +55,7 @@
                                     <td>{{ user_playlist.judul }}</td>
                                     <td>{{ user_playlist.nama }}</td>
                                     <td class="text-center">
-                                        <a class="btn btn-info" href="/green/detail_playlist/{{ user_playlist.id_playlist }}">Lihat</a>
+                                        <a class="btn btn-info" href="/green/detail_playlist/{{ user_playlist.id_playlist }}/{{ user_playlist.email_pembuat }}">Lihat</a>
                                     </td>
                                 </tr>
                             {% endfor %}
